--- a/intro_flutter_playground/android/app/src/main/AndroidManifest.xml
+++ b/intro_flutter_playground/android/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
         android:label="intro_flutter_playground"
         android:icon="@mipmap/ic_launcher">
         <activity
+            android:exported="true"
             android:name=".MainActivity"
             android:launchMode="singleTop"
             android:theme="@style/LaunchTheme"
