--- a/habit_tracker_flutter/pubspec.yaml
+++ b/habit_tracker_flutter/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
   flutter_launcher_icons: ^0.9.0
+  riverpod: 2.3.2
   flutter_svg: ^0.22.0
   hive: 2.2.3
   hive_flutter: 1.1.0
