--- a/habit_tracker_flutter/pubspec.yaml
+++ b/habit_tracker_flutter/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   hive: 2.2.3
   hive_flutter: 1.1.0
   uuid: 3.0.1
+  page_flip_builder: 0.1.3
 
 dev_dependencies:
   flutter_test:
